# kore-base

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md  a.json  pruba.txt  rustfmt.toml
.github/workflows/: rust.yml
core/: Cargo.toml  README.md
core/src/: error.rs  lib.rs  node.rs
core/src/api/: api.rs  error.rs  inner_api.rs  manager.rs  mod.rs
core/src/approval/: inner_manager.rs  manager.rs  mod.rs
core/src/authorized_subjecs/: authorized_subjects.rs  manager.rs
core/src/commons/: errors.rs  mod.rs  self_signature_manager.rs
core/src/commons/channel/: mod.rs
core/src/commons/crypto/: ed25519.rs  error.rs  mod.rs  secp256k1.rs
core/src/commons/identifier/: digest_identifier.rs  error.rs  key_identifier.rs  mod.rs  signature_identifier.rs
core/src/commons/identifier/derive/: digest.rs  key.rs  signature.rs
core/src/commons/models/: approval.rs  evaluation.rs  event.rs  mod.rs  request.rs  signature.rs  state.rs  validation.rs  value_wrapper.rs
core/src/commons/schema_handler/: gov_models.rs  mod.rs
core/src/commons/settings/: mod.rs
core/src/database/: db.rs  error.rs  memory.rs  mod.rs
core/src/database/layers/: approvals.rs  contract.rs  controller_id.rs  event.rs  event_request.rs  keys.rs  lce_validation_proofs.rs  mod.rs  preauthorized_subjects_and_providers.rs  prevalidated_event.rs  request.rs  signature.rs  subject.rs  subject_by_governance.rs  utils.rs  validation.rs  witness_signatures.rs
core/src/distribution/: error.rs  inner_manager.rs  manager.rs
core/src/evaluator/: errors.rs  manager.rs  mod.rs
core/src/evaluator/compiler/: compiler.rs  manager.rs  manifest.rs  mod.rs
core/src/evaluator/runner/: context.rs  executor.rs  manager.rs
core/src/event/: event_completer.rs  manager.rs
core/src/governance/: governance.rs  inner_governance.rs  main_governance.rs  mod.rs
core/src/ledger/: errors.rs  inner_ledger.rs  ledger.rs  manager.rs  mod.rs
core/src/message/: error.rs  message_receiver.rs  message_sender.rs  mod.rs
core/src/message/message_task_manager/: algorithm.rs  manager.rs
core/src/network/: mod.rs  network.rs  network_processor.rs  processor.rs  routing.rs
core/src/network/tell/: mod.rs  upgrade.rs
core/src/protocol/: error.rs  mod.rs
core/src/protocol/protocol_message_manager/: mod.rs
core/src/utils/: mod.rs  patch.rs
core/src/utils/message/: approval.rs  distribution.rs  evaluator.rs  event.rs  ledger.rs  validation.rs
core/src/validation/: manager.rs  mod.rs  validation.rs
core/tests/: integration_test.rs
core/tests/common/: error.rs  mod.rs  node_builder.rs  utils.rs
examples/basic_usage/: Cargo.toml  README.md
examples/basic_usage/src/: main.rs
examples/kore-boot/: Cargo.toml
examples/network-node/: Cargo.toml  config.toml
examples/network-node/src/: main.rs
identity/: Cargo.toml
identity/src/: lib.rs
identity/src/identifier/: digest_identifier.rs  error.rs  key_identifier.rs  mod.rs  signature_identifier.rs
identity/src/identifier/derive/: digest.rs  key.rs  signature.rs
identity/src/keys/: ed25519.rs  mod.rs  secp256k1.rs
network/: Cargo.toml
network/src/: addressable.rs  behaviour.rs  behaviour_old.rs  bootstrap.rs  circuit.rs  control_list.rs  ephemeral.rs  error.rs  lib.rs  node.rs  routing.rs  service.rs  transport.rs  transport_old.rs  utils.rs  worker.rs  worker_old.rs
protocols/kore-tell/: Cargo.toml
protocols/kore-tell/src/: codec.rs  handler.rs  json.rs  lib.rs  protocol.rs
protocols/tell/: Cargo.toml
protocols/tell/src/: cache.rs  handler.rs  lib.rs  protocol.rs
protocols/tell/src/codec/: binary.rs  borsh.rs  json.rs  mod.rs
protocols/tell/tests/: failures.rs
