[workspace]

members = [
    "core",
    "protocols/kore-tell"
]
resolver = "1"

[workspace.package]
version = "0.3.4"
edition = "2021"
authors = ["Kore Ledger, SL <info@kore-ledger.net>"]
description = "Kore Ledger base library"
readme = "README.md"
homepage = "https://www.kore-ledger.net"
repository = "https://github.com/kore-ledger/kore-base"
license = "AGPL-3.0-only"
keywords = ["traceability", "distributed-ledger", "kore", "sustainability"]
rust-version = "1.73"

[workspace.dependencies]
serde = "1.0"
serde_json = "1.0"
tokio = "1.20"
tokio-util = "0.7"
tokio-stream = "0.1"
rmp-serde = "1"
thiserror = "1"
blake3 = "1"
ed25519-dalek = { version = "2", features = ["alloc", "pkcs8"] }
async-trait = "0.1.56"
getrandom = "0.2"
borsh = { version = "1.1", features = ["std", "derive"] }
async-std = "1.12"
config = "0.13"
json-patch = "1"
jsonschema = { version = "0.17", default_features = false }
rand = "0.8.5"
base64 = "0.21"
blake2 = "0.10"
instant = "0.1.11"
unsigned-varint = "0.8"
time = "0.3"
k256 = { version = "0.13.1", features = ["ecdsa-core"] }
sha2 = "0.10"
sha3 = "0.10"
futures = "0.3.24"
log = "0.4"
hex = "0.4.3"
libp2p = { version = "0.45.1", default_features = false }
wasmtime = "16.0"
serial_test = "3.0"
memsecurity = { version = "3.4.0", features = ["encryption"] }

[profile.release]
lto = true
codegen-units = 1
debug = false
debug-assertions = false
panic = "abort"

[profile.test]
debug = true

[profile.dev]
debug = true

[profile.doc]
debug-assertions = false

 
