[package]
name = "kore-base"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[features]
default = ["secp256k1"]
all = ["default", "evaluation", "approval", "validation"]
evaluation = ["dep:wasmtime", "dep:async-std"]
approval = []
validation = []
secp256k1 = ["dep:k256"]

[dependencies]
tokio = { workspace = true, features = ["time", "sync", "macros", "rt"] }
libp2p = { workspace = true, default_features = false, features = [
	"identify",
	"kad",
	"noise",
	"yamux",
	"macros",
	"tcp",
	"tokio",
	"dns",
] }
config = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
hex = { workspace = true }
async-std = { workspace = true, optional = true }
jsonschema = { workspace = true }
time = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = {workspace = true }
rmp-serde = { workspace = true }
borsh = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
instant = { workspace = true }
unsigned-varint = { workspace = true, features = ["futures"] }
base64 = { workspace = true }
getrandom = { workspace = true }
json-patch = { workspace = true }
ed25519-dalek = { workspace = true, features = ["serde"] }
k256 = { workspace = true, optional = true }
blake2 = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
wasmtime = { workspace = true, features = ["cache"], optional = true }
memsecurity = { workspace = true, features = ["encryption"] }
prometheus-client = { workspace = true }
tell = { path = "../protocols/tell" }
identity = { path = "../identity" }
network = { path = "../network" }
chacha20poly1305 = "0.10"

[dev-dependencies]
kore-base = { path = ".", features = ["all"] }
libp2p-swarm-test = { workspace = true }
serial_test = { workspace = true }
async-std = { version = "1.6.2", features = ["attributes"] }
quickcheck = { version = "1" }

