[package]
name = "identity"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
base64 = { workspace = true }
blake3 = { workspace = true }
borsh = { workspace = true }
ed25519-dalek = { workspace = true, optional = true}
getrandom = { workspace = true }
hex = { workspace = true }
k256 = { workspace = true, optional = true }
memsecurity = { workspace = true, features = ["encryption"] }
rmp-serde = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }

[features]
default = ["ed25519", "secp256k1"]
ed25519 = ["ed25519-dalek"]
secp256k1 = ["k256"]
