[package]
name = "network"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
bs58 = { workspace = true }
either = { workspace = true }
fnv = { workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
hex = { workspace = true }
identity = { path = "../identity" }
ip_network = { workspace = true }
libp2p = { workspace = true, default_features = false, features = [
	"identify",
	"kad",
	"noise",
	"yamux",
	"macros",
	"tcp",
	"tokio",
	"dns",
	"mdns",
	"metrics",
	"ping",
	"relay",
	"dcutr",
	"quic",
	"plaintext"
] }
linked_hash_set = { workspace = true }
metrics = { workspace = true }
prometheus-client = { workspace = true }
smallvec = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tell = { path = "../protocols/tell", default-features = false, features = ["binary"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "sync"] }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
libp2p-swarm-test = { workspace = true }
rand = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-test = "0.2.4"

