[package]
name = "basic_usage"
version = "0.3.0"
edition = "2021"
authors = ["Kore Ledger, SL<info@kore-ledger.com>"]
description = "Kore base library basic usage example"
readme = "../README.md"
homepage = "https://kore-ledger.com"
repository = "https://github.com/kore-ledger/kore-base"
license = "AGPL-3.0-only"
keywords = ["blockchain", "distributed-ledger", "taple", "sustainability"]

[workspace]

[dependencies]
kore-base = { path = "../../core", features = ["validation"] }
tokio = { version = "1.20", features = [
    "default",
    "time",
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
] }
hex = "0.4.3"
