[package]
name = "network-node"
version = "0.1.0"
edition = "2021"
publish = false
description = "A simple example of a network node"
license = "AGPL-3.0-only"

[package.metadata.release]
release = false

[dependencies]
config = { workspace = true }
hex = { workspace = true }
identity = { path = "../../identity" }
network = { path = "../../network" }
prometheus-client = { workspace = true }
serde = { version = "1.0", features = ["derive"], workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }