[package]
name = "kore-tell"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
borsh = { workspace = true }
futures = { workspace = true }
libp2p = { version = "0.53.0", default_features = false, features = [
	"identify",
]}
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
smallvec = "1.11.1"
void = "1.0.2"


[dev-dependencies]
async-std = { version = "1.6.2", features = ["attributes"] }
futures_ringbuf = "0.4.0"