[package]
name = "tell"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
borsh = { workspace = true, optional = true }
futures = { workspace = true }
futures-bounded = "0.2"
libp2p = { version = "0.53.0", default_features = false, features = [
	"identify",
]}
lru = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true, features = ["derive"]}
serde_json = { workspace = true, optional = true }
smallvec = { workspace = true }
tracing = { workspace = true }
void = "1.0.2"

[dev-dependencies]
anyhow = "1.0.79"
async-std = { version = "1.6.2", features = ["attributes"] }
futures_ringbuf = "0.4.0"
libp2p-swarm-test = { version = "0.3.0" }
rand = "0.8.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["binary", "borsh", "json"]
json = ["serde_json"]
binary = []